--- a/portfolio-site/.env.local.example
+++ b/portfolio-site/.env.local.example
@@ -1,5 +1,5 @@
 # Copy this file to .env.local and fill in your values
 
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=https://cvkcwvmlnghwwvdqudod.supabase.co
+# Supabase - get these from your Supabase project settings
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
