--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "next": "^16.1.6",
     "posthog-js": "^1.336.4",
