--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
     "@supabase/supabase-js": "^2.39.0",
+    "framer-motion": "^12.34.0",
     "next": "^16.1.6",
     "posthog-js": "^1.336.4",
     "posthog-node": "^5.21.2",
