--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@splinetool/react-spline": "^4.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "framer-motion": "^12.34.0",
@@ -16,7 +18,8 @@
     "posthog-js": "^1.336.4",
     "posthog-node": "^5.21.2",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^20",
